[gd_scene load_steps=22 format=3 uid="uid://blo8vwrgo5te8"]

[ext_resource type="Script" path="res://Player/Player Character.gd" id="1_o8ybw"]
[ext_resource type="Resource" uid="uid://0dlax8f6qunu" path="res://TestSkinDeck.tres" id="2_yhupi"]
[ext_resource type="Texture2D" uid="uid://bii3s3vwoui3b" path="res://Player/wizard2.0-Sheet.png" id="3_5eodr"]
[ext_resource type="Script" path="res://Spell Manager.gd" id="3_dckfd"]
[ext_resource type="Script" path="res://addons/godot-rollback-netcode/NetworkAnimationPlayer.gd" id="3_vaspw"]
[ext_resource type="PackedScene" uid="uid://8jmt2slvcqg" path="res://Spell Effects/Spell Slot.tscn" id="4_tyvj0"]
[ext_resource type="Script" path="res://Velocity.gd" id="9_hac0t"]
[ext_resource type="Script" path="res://Health.gd" id="9_hrbbv"]
[ext_resource type="PackedScene" uid="uid://knpxehglpha1" path="res://UI/player_status.tscn" id="10_3tqh8"]
[ext_resource type="AudioStream" uid="uid://cp1l0fyhms636" path="res://Sound/Hurt_sound.wav" id="10_f1ste"]
[ext_resource type="PackedScene" uid="uid://dgespc20acr8o" path="res://Player/player_character_input.tscn" id="10_twgyi"]
[ext_resource type="Resource" uid="uid://dg45jqu0yw6f6" path="res://Inputs/Null Input.tres" id="11_yip05"]
[ext_resource type="Script" path="res://addons/godot-rollback-netcode/NetworkTimer.gd" id="13_aymwb"]

[sub_resource type="SGRectangleShape2D" id="SGRectangleShape2D_4pwhl"]
extents_x = 513799
extents_y = 778747

[sub_resource type="Animation" id="Animation_fdsuh"]
resource_name = "Cast1"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_jodjb"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 9]
}

[sub_resource type="Animation" id="Animation_ouvq7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_wj64s"]
resource_name = "Walk"
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_brjgp"]
_data = {
"Cast1": SubResource("Animation_fdsuh"),
"Idle": SubResource("Animation_jodjb"),
"RESET": SubResource("Animation_ouvq7"),
"Walk": SubResource("Animation_wj64s")
}

[sub_resource type="Shader" id="Shader_obj0k"]
code = "shader_type canvas_item;

uniform vec4 new_color: source_color;

void fragment() {
	vec4 curr_color = texture(TEXTURE, UV);
	// Find only blue pixels
	if (curr_color.rga == vec3(0,0,1)  && curr_color.b > 0.0) {
		COLOR.rgb = new_color.rgb* curr_color.b;
	}
		
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lbhbm"]
shader = SubResource("Shader_obj0k")
shader_parameter/new_color = Color(0.890196, 0.639216, 0.172549, 1)

[node name="Player Character" type="SGCharacterBody2D" node_paths=PackedStringArray("input") groups=["network_sync", "pierceable"]]
collision_layer = 3
collision_mask = 3
fixed_position_x = 196608
fixed_position_y = 393216
position = Vector2(3, 6)
script = ExtResource("1_o8ybw")
input = NodePath("PlayerCharacterInput")
skin_deck = ExtResource("2_yhupi")

[node name="CollisionShape2D" type="SGCollisionShape2D" parent="."]
shape = SubResource("SGRectangleShape2D_4pwhl")

[node name="NetworkAnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_brjgp")
}
script = ExtResource("3_vaspw")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
texture_repeat = 1
material = SubResource("ShaderMaterial_lbhbm")
texture = ExtResource("3_5eodr")
hframes = 16
frame = 8

[node name="Spell Manager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_dckfd")
known_spells = Array[Resource("res://Spell Effects/Spell.gd")]([null, null])

[node name="Spell Slot" parent="Spell Manager" node_paths=PackedStringArray("caster") instance=ExtResource("4_tyvj0")]
caster = NodePath("../..")

[node name="Spell Slot2" parent="Spell Manager" node_paths=PackedStringArray("caster") instance=ExtResource("4_tyvj0")]
caster = NodePath("../..")
spell_index = 1

[node name="Velocity" type="Node" parent="." node_paths=PackedStringArray("animation_player") groups=["network_sync"]]
unique_name_in_owner = true
script = ExtResource("9_hac0t")
animate = true
animation_player = NodePath("../NetworkAnimationPlayer")
fixed_diagonal_velocity_difference = 65536
fixed_angle_diff = 1000
friction_fixed = 65536
mass_fixed = 65536
acceleration_fixed = 65536
cut_accel_fixed = 65536
max_speed_fixed = 131072
turning_speed_fixed = 6556

[node name="Health" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("9_hrbbv")
max_health = 1000
current_health = 1000
hurt_sound = ExtResource("10_f1ste")

[node name="Player Status" parent="." instance=ExtResource("10_3tqh8")]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="PlayerCharacterInput" parent="." node_paths=PackedStringArray("velocity") instance=ExtResource("10_twgyi")]
unique_name_in_owner = true
input_keys = ExtResource("11_yip05")
velocity = NodePath("../Velocity")
device = 1

[node name="DespawnDelay" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("13_aymwb")
wait_ticks = 10

[connection signal="dead" from="Health" to="." method="_on_health_dead"]
[connection signal="health_changed" from="Health" to="Player Status" method="health_changed"]
[connection signal="timeout" from="DespawnDelay" to="." method="_on_despawn_delay_timeout"]
